<resources>
    <string name="app_name">HeadsAndHeadsTest</string>
    <string name="text_published">Published:</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">No</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>

    <string name="sign_up">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="persons">Persons</string>

    <string name="weather_message" formatted="false">Now in %s %s degrees, </string>

    <string name="exit_dialog_message">Do you want exit?</string>
    <string name="exit_dialog_title">Exit</string>

    <!--Hints-->
    <string name="email_hint">e-mail</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="repeat_pass_hint">Repeat password</string>

    <!--Errors-->
    <string name="text_input_empty_error">please, enter the data</string>
    <string name="dialog_error_title">Sorry!</string>
    <string name="user_error_dialog_message">It seems that such a user does not exist. \n Do you want sign up?</string>
    <string name="password_error">incorrect password</string>
    <string name="sign_up_password_error">password must be at least 6 characters long and contain at least 1 number and uppercase letter</string>
    <string name="email_error">incorrect e-mail</string>
    <string name="name_error">incorrect name</string>
    <string name="input_data_error">incorrect data</string>
    <string name="repeat_password_error">passwords must match</string>
    <string name="network_error">Internet connection problems</string>
    <string name="registration_error">User was already registered!</string>
    <string name="snackbar_error_message">Sorry, but weather forecast not available because there is no internet connection</string>
    <string name="snackbar_geolocation_error">Sorry, but weather forecast not available without geolocation</string>
    <string name="user_exists_error">This user already exists</string>
    <string name="logout">Log out</string>
    <string name="unsuccess_login">Incorrect email or password</string>
    <string name="title_news">News</string>
    <string name="login">Login</string>
    <string name="item_weather">Weather</string>=
</resources>
